# Task_Skillbox

./: README.md
Module_28_2/: CMakeLists.txt  Module_28_2.cpp
Module_29_1/: CMakeLists.txt  Module_29_1.cpp
Module_29_2/: CMakeLists.txt  Module_29_2.cpp
Module_30_1/: CMakeLists.txt  Module_30_1.cpp
Module_30_2/: CMakeLists.txt  Module_30_2.cpp
Module_30_3/: CMakeLists.txt  Module_30_3.cpp
Module_31_1/: CMakeLists.txt  Module_31_1.cpp
Module_31_2/: CMakeLists.txt  Module_31_2.cpp
Module_32_1/: CMakeLists.txt  Module_32_1.cpp
Module_32_2/: CMakeLists.txt  Module_32_2.cpp
Module_32_2/Telegram Desktop/: IMG_3854.MOV  IMG_3859.MOV  M19_P5 (2).cpp  M19_P5.cpp  air-temperature.json  qt-opensource-windows-x86-5.12.12.exe.torrent  task.txt  С++ Developer. Professional.docx  Файлы (10).rar  Файлы (11).rar  Файлы (12).rar  Файлы (13).rar  Файлы (14).rar  Файлы (15).rar  Файлы (16).rar  Файлы (2).rar  Файлы (3).rar  Файлы (4).rar  Файлы (5).rar  Файлы (7).rar  Файлы (8).rar  Файлы (9).rar  Файлы.rar
Module_33_1/: CMakeLists.txt  Module_33_1.cpp
Module_33_2/: CMakeLists.txt  Module_33_2.cpp
Module_33_3/: CMakeLists.txt  Module_33_3.cpp
Module_33_4/: CMakeLists.txt  Module_33_4.cpp
Module_34_1/: CMakeLists.txt
Module_35_1/: CMakeLists.txt  back.h  main.cpp
Module_35_2/: CMakeLists.txt  Module_35_2.cpp
Module_35_3/: CMakeLists.txt  Module_35_3.cpp
Module_36_1_1/: CMakeLists.txt  main.cpp
Skillbox_study/: README.md
Skillbox_study/Module_26_1/: CMakeLists.txt  Module_26_1.cpp
Skillbox_study/Module_26_2/: CMakeLists.txt  Module_26_2.cpp
Skillbox_study/Module_26_3/: CMakeLists.txt  Module_26_3.cpp
Test_JN/: CMakeLists.txt  main.cpp
build-Module_36_1_1-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
module_32_3/: CMakeLists.txt  Module_32_3.cpp  record.pb.cc  record.pb.h  record.proto
(+19 files in other folders)
